--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="col-sm-3">
@@ -25,7 +25,11 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: "form-control" %>
   </div>
-<br>
+  <div class="col-sm-3">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control"%>
+  </div>
+<br/>
   <div class="col-sm-2">
     <%= f.submit "Sign up" ,  class: "btn btn-primary"%>
   </div>
