--- a/app/views/messages/_user_list.html.erb
+++ b/app/views/messages/_user_list.html.erb
@@ -2,8 +2,15 @@
 <% user_list = User.where.not(id: current_user.id) %>
 <ul class="list-group">
   <% user_list.each do |user| %>
-    <li class="list-group-item">
-      <%= link_to user.name, new_message_path(user_id: user.id), class: "no" %>
+    <li class="list-group-item d-flex align-items-center">
+       <%= user_avatar(user) %>
+      <div>
+        <div style="font-size: 1.1rem;">
+          <%= link_to user.name, new_message_path(user_id: user.id), class: "text-decoration-none fw-bold" %>
+        </div>
+        
+      </div>
     </li>
   <% end %>      
 </ul>
+
