--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag 'application' %>
+    <%= javascript_importmap_tags "application" %>
+
   </head>
 
   <body class="bg-light">
@@ -42,6 +43,17 @@
       </div>
     </nav>
 
+    <!-- Flash Message  -->
+    <% if flash.any? %>
+      <div class="container mt-3">
+        <% flash.each do |key, message| %>
+          <div class="alert alert-<%= key == 'notice' ? 'success' : 'danger' %> alert-dismissible fade show" role="alert">
+            <%= message %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
     <!-- Main Content -->
     <div class="container mt-4">
       <%= yield %>
