--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -22,7 +22,7 @@
             <% @messages.each do |message| %>
               <% is_current_user = message.sender == current_user %>
               <div class="d-flex mb-2 <%= is_current_user ? 'justify-content-end' : 'justify-content-start' %>">
-                <div class="<%= is_current_user ? 'bg-success text-white' : 'bg-primary text-white' %> p-2 rounded" style="max-width: 70%;">
+                <div class="<%= is_current_user ? 'bg-secondary text-white' : 'bg-info text-black' %> p-2 fs-6 rounded" style="max-width: 70%;">
                   <div><%= message.body %></div>
                   <div class="text-end" style="font-size: 0.75rem; opacity: 0.8;"><%= message.created_at.strftime('%I:%M %p') %></div>
                 </div>
@@ -32,12 +32,22 @@
 
 
           <!-- Message Input Form -->
-          <%= form_with model: @message, url: messages_path, local: true do |f| %>
+          <%= form_with model: @message, url: messages_path, data: { controller: "message-form" }, local: true do |f| %>
             <%= f.hidden_field :receiver_id, value: @chat_user.id %>
             <div class="input-group">
-              <%= f.text_field :body, class: "form-control", placeholder: "Type a message..." %>
+              <%= f.text_field :body,
+                    class: "form-control",
+                    placeholder: "Type a message...",
+                    data: {
+                      message_form_target: "input",
+                      action: "input->message-form#onInput"
+                    } %>
+
               <div class="input-group-append">
-                <%= f.submit "Send", class: "btn btn-primary" %>
+                <%= f.submit "Send",
+                      class: "btn btn-primary",
+                      data: { message_form_target: "submit" },
+                      disabled: true %>
               </div>
             </div>
           <% end %>
